// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildMessageMetadata > abstract + concrete hierarchy > should inherit fields and hooks from parent 1`] = `
{
  "broadcast": false,
  "compressed": null,
  "deadLetter": false,
  "delay": null,
  "encrypted": {
    "predicate": {},
  },
  "expiry": null,
  "fields": [
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "payload",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "string",
    },
    {
      "decorator": "IdentifierField",
      "default": "[function]",
      "enum": null,
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "source",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "string",
    },
  ],
  "generated": [],
  "headers": [],
  "hooks": [
    {
      "callback": "[function]",
      "decorator": "OnValidate",
    },
    {
      "callback": "[function]",
      "decorator": "OnCreate",
    },
  ],
  "message": {
    "decorator": "Message",
    "name": "DerivedMsg",
  },
  "namespace": "derived",
  "persistent": false,
  "priority": null,
  "retry": null,
  "target": "DerivedMsg",
  "topic": null,
  "version": 1,
}
`;

exports[`buildMessageMetadata > multi-level hierarchy > should merge metadata from all three levels 1`] = `
{
  "broadcast": true,
  "compressed": null,
  "deadLetter": false,
  "delay": null,
  "encrypted": null,
  "expiry": null,
  "fields": [
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "age",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "integer",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "name",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "string",
    },
    {
      "decorator": "IdentifierField",
      "default": "[function]",
      "enum": null,
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "generated": [],
  "headers": [],
  "hooks": [],
  "message": {
    "decorator": "Message",
    "name": "GrandchildMsg",
  },
  "namespace": null,
  "persistent": false,
  "priority": null,
  "retry": null,
  "target": "GrandchildMsg",
  "topic": null,
  "version": 1,
}
`;

exports[`buildMessageMetadata > single class with mixed decorators > should resolve metadata 1`] = `
{
  "broadcast": false,
  "compressed": null,
  "deadLetter": false,
  "delay": null,
  "encrypted": null,
  "expiry": null,
  "fields": [
    {
      "decorator": "IdentifierField",
      "default": "[function]",
      "enum": null,
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "decorator": "TimestampField",
      "default": "[function]",
      "enum": null,
      "key": "createdAt",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "date",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "name",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "string",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "email",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": true,
      "schema": null,
      "transform": null,
      "type": "email",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "traceId",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "string",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "correlationId",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "generated": [
    {
      "key": "correlationId",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "headers": [
    {
      "headerName": "x-trace-id",
      "key": "traceId",
    },
  ],
  "hooks": [
    {
      "callback": "[function]",
      "decorator": "OnCreate",
    },
  ],
  "message": {
    "decorator": "Message",
    "name": "SimpleEvent",
  },
  "namespace": "test",
  "persistent": false,
  "priority": null,
  "retry": null,
  "target": "SimpleEvent",
  "topic": null,
  "version": 1,
}
`;

exports[`buildMessageMetadata abstract + concrete hierarchy should inherit fields and hooks from parent 1`] = `
{
  "broadcast": false,
  "compressed": null,
  "deadLetter": false,
  "delay": null,
  "encrypted": {
    "predicate": {},
  },
  "expiry": null,
  "fields": [
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "payload",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "string",
    },
    {
      "decorator": "IdentifierField",
      "default": "[function]",
      "enum": null,
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "source",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "string",
    },
  ],
  "generated": [],
  "headers": [],
  "hooks": [
    {
      "callback": "[function]",
      "decorator": "OnValidate",
    },
    {
      "callback": "[function]",
      "decorator": "OnCreate",
    },
  ],
  "message": {
    "decorator": "Message",
    "name": "DerivedMsg",
  },
  "namespace": "derived",
  "persistent": false,
  "priority": null,
  "retry": null,
  "target": "DerivedMsg",
  "topic": null,
  "version": 1,
}
`;

exports[`buildMessageMetadata multi-level hierarchy should merge metadata from all three levels 1`] = `
{
  "broadcast": true,
  "compressed": null,
  "deadLetter": false,
  "delay": null,
  "encrypted": null,
  "expiry": null,
  "fields": [
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "age",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "integer",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "name",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "string",
    },
    {
      "decorator": "IdentifierField",
      "default": "[function]",
      "enum": null,
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "generated": [],
  "headers": [],
  "hooks": [],
  "message": {
    "decorator": "Message",
    "name": "GrandchildMsg",
  },
  "namespace": null,
  "persistent": false,
  "priority": null,
  "retry": null,
  "target": "GrandchildMsg",
  "topic": null,
  "version": 1,
}
`;

exports[`buildMessageMetadata single class with mixed decorators should resolve metadata 1`] = `
{
  "broadcast": false,
  "compressed": null,
  "deadLetter": false,
  "delay": null,
  "encrypted": null,
  "expiry": null,
  "fields": [
    {
      "decorator": "IdentifierField",
      "default": "[function]",
      "enum": null,
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
    {
      "decorator": "TimestampField",
      "default": "[function]",
      "enum": null,
      "key": "createdAt",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "date",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "name",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "string",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "email",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": true,
      "schema": null,
      "transform": null,
      "type": "email",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "traceId",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "string",
    },
    {
      "decorator": "Field",
      "default": null,
      "enum": null,
      "key": "correlationId",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "schema": null,
      "transform": null,
      "type": "uuid",
    },
  ],
  "generated": [
    {
      "key": "correlationId",
      "length": null,
      "max": null,
      "min": null,
      "strategy": "uuid",
    },
  ],
  "headers": [
    {
      "headerName": "x-trace-id",
      "key": "traceId",
    },
  ],
  "hooks": [
    {
      "callback": "[function]",
      "decorator": "OnCreate",
    },
  ],
  "message": {
    "decorator": "Message",
    "name": "SimpleEvent",
  },
  "namespace": "test",
  "persistent": false,
  "priority": null,
  "retry": null,
  "target": "SimpleEvent",
  "topic": null,
  "version": 1,
}
`;
